feat: ttl getter endpoint, already registered identity checks, update get_data_for_encryption endpoint
